Drop fs from Suggests and replace limited usage *
fs was used only in two lines of test-compat-stars, i.e. fs::path_abs().
This has been replaced (not entirely an exact replacement though) by
normalizePath(), which should be sufficient for this test.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,6 +43,5 @@ Suggests:
     sf,
     raster,
     stars,
-    terra,
-    fs
+    terra
 SystemRequirements: QGIS (>= 3.16). OSGeo4W is recommended for Windows users. 
