--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -95,13 +95,24 @@ jobs:
         with:
           args: install qgis
 
-      - name: Query R dependencies based on available versions
+      - name: Query R dependencies and report available versions
         run: |
+          # Query R dependencies and report available versions
+          cat("::group::Install pak\n")
           install.packages("pak")
+          cat("::endgroup::\n")
+          cat("::group::Create minimal data frame with pkg deps and store them\n")
           depends <- pak::pkg_deps(c("deps::.", "any::sessioninfo", "any::rcmdcheck"), dependencies = c("Config/Needs/check", "all"))[, c("ref", "version")]
           depends <- depends[depends$ref != "deps::.", ]
           saveRDS(depends, ".github/depends.Rds")
+          cat("::endgroup::\n")
+          cat("::group::Store R-version\n")
           writeLines(sprintf("R-%i.%i", getRversion()$major, getRversion()$minor), ".github/R-version")
+          cat("::endgroup::\n")
+          cat("::group::Print results\n")
+          cat("R version:", sprintf("R-%i.%i", getRversion()$major, getRversion()$minor), "\n")
+          print(as.data.frame(depends))
+          cat("::endgroup::\n")
         shell: Rscript {0}
 
       - name: Restore (or define new) R package cache
@@ -110,7 +121,7 @@ jobs:
           path: |
             ${{ env.R_LIBS_USER }}/*
             !${{ env.R_LIBS_USER }}/pak
-          key: ${{ matrix.config.os }}-${{ matrix.config.r-pkg-cache }}-${{ hashFiles('.github/R-version') }}-1-${{ hashFiles('.github/depends.Rds') }}
+          key: ${{ matrix.config.os }}-${{ matrix.config.r-pkg-cache }}-${{ hashFiles('.github/R-version') }}-${{ hashFiles('.github/depends.Rds') }}
 
       - name: Install missing package dependencies
         run: |
