GHA pkgdown: do install package on PR (the default)

--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -45,4 +45,4 @@ jobs:
       - name: Build site without deploying
         if: github.event_name == 'pull_request'
         run: |
-          Rscript -e 'pkgdown::build_site(preview = FALSE, install = FALSE)'
+          Rscript -e 'pkgdown::build_site(preview = FALSE)'
