Revert "Vign QGIS expressions: use rprojroot for pkgdown GHA workflow"
This reverts commit 176fecc195fa41a7bc2d3182409cf6f52d39a694.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -67,8 +67,7 @@ Suggests:
     terra,
     knitr,
     rmarkdown,
-    stringi,
-    rprojroot
+    stringi
 SystemRequirements: QGIS latest or long-term release (>= 3.28). Older QGIS 
   releases are not officially supported, but may work since QGIS 3.16.
 VignetteBuilder: knitr
