Add (wrapper) function qgis_detect_paths()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,7 @@ export(qgis_configure)
 export(qgis_description)
 export(qgis_detect_macos)
 export(qgis_detect_macos_paths)
+export(qgis_detect_paths)
 export(qgis_detect_windows)
 export(qgis_detect_windows_paths)
 export(qgis_dict_input)
